# UART-LED-Controller-Desktop-APP

./: PortFSetup.h  README.md
Digital Clock Project/: Digital Clock.uvguix.fallo  Digital Clock.uvoptx  Digital Clock.uvprojx  PortFSetup.c  PortFSetup.h  SysTick.c  SysTick.h  Uart.c  Uart.h  main.c
Digital Clock Project/Listings/: Digital Clock.map
Digital Clock Project/Objects/: Digital Clock.axf  Digital Clock.build_log.htm  Digital Clock.htm  Digital Clock.lnp  Digital Clock_Target 1.dep  main.d  portfsetup.d  uart.d
LED_CONTROLLER/: CMakeLists.txt  appicon.aps  mainwindow.cpp  mainwindow.h  mainwindow.ui
